# statisfactory

./: .buildinfo  .bumpversion.cfg  .gitignore  CHANGELOG.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  regression.py  regression_exemple.py  remove.ipynb  search.html  searchindex.js  setup.py  smokeTest.ipynb  smoketest.py  tox.ini
.github/workflows/: codeql.yml  doc-publish.yml  format.yml  package.yml  sync-css.yml  test.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/statisfactory/: index.html
docs/source/: conf.py
exemples/: regression.py
exemples/dummyRepo/: catalog.yaml  manifest.json  pyproject.toml  regression.py  statisfactory.yaml
fakerepo/: catalog.yaml
sources/: started.html
statisfactory/: __init__.py  __main__.py  __version__.py  artefact_interactor.py  catalog.py  craft.py  errors.py  logger.py  models.py  pipeline.py
statisfactory/IO/: __init__.py  artefact_interactor.py  catalog.py  models.py
statisfactory/cli/: __init__.py  cli.py  logger.py  manifest.py  notebooks.py  run.py  wd.py
statisfactory/context/: __init__.py  context.py  models.py
statisfactory/internals/: __init__.py  maker.py  user_injected.py
statisfactory/loader/: __init__.py  catalog_loader.py  config_loader.py  parameters_loader.py  path_utils.py  pipelines_loader.py  pyproject_loader.py  yaml_utils.py
statisfactory/models/: __init__.py  models.py
statisfactory/operator/: __init__.py  annotations.py  craft.py  mixinHookable.py  scoped.py  selements.py
tests/: test_active_session.py  test_catalog.py  test_cli.py  test_craft.py  test_custom_session.py  test_dynamic_interpolation.py  test_interactors.py  test_loader.py  test_models.py  test_pipeline.py  test_pipelines_config.py  test_side_effects.py  test_smoketest.py
(+204 files in other folders)
