[tool.poetry]
name = "statisfactory"
version = "0.10.3"
description = "A Satisfying Statistical Factory"
authors = ["hugo juhel"]

[tool.semantic_release]
version_variable = [
    "statisfactory/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.scripts]
statisfactory = 'statisfactory.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
networkx = "2.5"
pandas = "^1.2.4"
click = "^7.1.2"
pyodbc = "^4.0.30"
PyYAML = "^5.4.1"
xlrd = "1.2.0"
dynaconf = "^3.1.4"
anyconfig = "^0.10.1"
nbconvert = "^6.0.7"
chardet = "^4.0.0"
boto3 = "^1.18.50"
lakefs-client = "^0.52.2"
pygit2 = "^1.7.0"
graphviz = "^0.17"
openpyxl = "^3.0.9"
Jinja2 = "^3.0.2"
datapane = "^0.12.3"
pyarrow = "<6.0.0"
tomli = "^2.0.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"
bump2version = "^1.0.1"
jupyterlab = "^3.1.14"
sphinx-autoapi = "^1.8.4"
sphinx-book-theme = "^0.1.6"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
Sphinx = "^4.2.0"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
